templates/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
    endpoints.kubernetes.io/managed-by: endpoint-controller
  name: argocd-server
  namespace: argocd
subsets:
- addresses:
  - ip: 10.244.3.196
    nodeName: thw03
    targetRef:
      kind: Pod
      namespace: argocd
  ports:
  - name: https
    port: 8080
    protocol: TCP
  - name: http
    port: 8080
    protocol: TCP
